tfg-brands/main.tf
module "app" {
  source = "git@github.com:SapphireSystems/terraform-aws-ec2-instance?ref=v1.0.0"

  for_each = local.app

  name                   = each.key
  ami                    = each.value.ami
  instance_type          = each.value.instance_type
  subnet_id              = each.value.subnet_id
  vpc_security_group_ids = each.value.vpc_security_group_ids
  iam_instance_profile   = lookup(each.value, "iam_instance_profile", "")
  monitoring = each.value.monitoring

  enable_volume_tags = false
  root_block_device  = lookup(each.value, "root_block_device", [])
  ebs_volume         = lookup(each.value, "ebs_volume", {})

  tags = merge(
    each.value.tags,
    local.tags
  )
}

module "domain_controller" {
  source = "git@github.com:SapphireSystems/terraform-aws-ec2-instance?ref=v1.0.0"

  for_each = local.connectors

  name                   = each.key
  ami                    = each.value.ami
  instance_type          = each.value.instance_type
  subnet_id              = each.value.subnet_id
  vpc_security_group_ids = each.value.vpc_security_group_ids
  iam_instance_profile   = lookup(each.value, "iam_instance_profile", "")
  monitoring = each.value.monitoring

  enable_volume_tags = false
  root_block_device  = lookup(each.value, "root_block_device", [])
  ebs_volume         = lookup(each.value, "ebs_volume", {})

  tags = merge(
    each.value.tags,
    local.tags
  )
}

module "patching" {
  source                         = "git@github.com:SapphireSystems/terraform-aws-ssm-patch-management?ref=v1.0.4"
  schedule_london                = "cron(0 0 22 ? * TUE#3 *)"
  schedule_london_two            = "cron(0 0 22 ? * TUE#3 *)"
}

resource "aws_network_interface" "this" {
  subnet_id       = data.aws_subnet.app_a.id
  security_groups = [local.sg.baseline_app, local.sg.migration, local.sg.tfg_dmz01]

  attachment {
    instance     = module.app["GEN2TFGDMZ01"].id
    device_index = 1
  }
}

module "dashboard" {
  source = "git@github.com:SapphireSystems/utilities.git//Dashboard/windows-dashboard?ref=feat/dashboard"

  dashboard_name = "TFG_Brands_Monitoring"
  cw_period      = 60
  region         = "eu-west-2"
  view           = "timeSeries"

  depends_on = [module.app]
}
